| Bug #18753 | Partitions: auto_increment fails | ||
|---|---|---|---|
| Submitted: | 3 Apr 2006 19:11 | Modified: | 12 Apr 2006 3:29 |
| Reporter: | Peter Gulutzan | ||
| Status: | Closed | ||
| Category: | Server: Partition | Severity: | S3 (Non-critical) |
| Version: | 5.1.9-beta-debug | OS: | Linux (SUSE 10.0) |
| Assigned to: | Sergey Gluhov | Target Version: | |
[3 Apr 2006 19:11]
Peter Gulutzan
[4 Apr 2006 4:15]
Miguel Solorzano
Thank you for the bug report.
[6 Apr 2006 12:30]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/4550
[8 Apr 2006 19:31]
Mikael Ronstrom
The patch works I am pretty sure. I'm slightly worried that it's performance isn't the best but on the other hand I presume this is the only really safe way.
[10 Apr 2006 17:30]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/4726
[10 Apr 2006 17:36]
Sergey Gluhov
Fixed in 5.1.10
[12 Apr 2006 3:29]
Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
Documented bugfix in 5.1.10 changelog. Closed.
