Fix for bug#18753 Partitions: auto_increment fails Current auto increment value is placed in partition in which latest record was saved. So to get auto_increment they have to scan all partitions and return max value.